Welcome to the NcX changelog

Changelog 20231206
• Fix/patch camera
• Fix/patch bluetooth


Changelog 20231205
• Security update: December 2023
• Fix for OnUpdate app to correctly show download size in the future


Changelog 20231204
• Add object cut/copy/save as sticker in Gallery


Changelog 20231203
• Introduce KnoxPatch by Salvo [BlackMesa123]
• Introduct camera features from S21FE


Changelog 20231202
• Fix Voice Focus
• Add screen modes in settings
• Floating: Add camera access toggle
• Floating: POI in Gallery
• Floating: Switch to HighEnd animations
• Floating: Allow remaster in all photos
• Floating: Allow individual app cast in SmartView
• Floating: Full edge lighting
• Floating: Add interview mode in voice recorder