@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <OnOTAInfo>
   <RomName>NcX ROM</RomName>
-  <VersionName>20231206 Update</VersionName>
-  <BuildNumber type="integer">20231206</BuildNumber>
-  <DownloadURL>https://downloads.simon1511.de/s/oQBAaZiRqFmJby8/download/OTA-20231206-a52sxq.zip</DownloadURL>
+  <VersionName>20240101 Update</VersionName>
+  <BuildNumber type="integer">20240101</BuildNumber>
+  <DownloadURL>https://downloads.simon1511.de/s/Sr3SR32oBdspR4W/download/OTA-20240101-a52sxq.zip</DownloadURL>
   <AndroidVer>14</AndroidVer>
   <OneUIVer>6</OneUIVer>
-  <CheckMD5>8fe4cfbb4596fc4d55dcdde64d146644</CheckMD5>
-  <FileSize type="long">1927498695</FileSize>
+  <CheckMD5>7abc6047dbf08afd806c7e61b89ade0d</CheckMD5>
+  <FileSize type="long">3387162838</FileSize>
   <WebsiteURL>https://forum.xda-developers.com/apps/magisk/dev-magisk-canary-channel-bleeding-edge-t3839337</WebsiteURL>
   <ChangelogHeader>https://raw.githubusercontent.com/ShaDisNX255/NcX_OnUpdate/1035d72bc45728992d5ba59b44915635765ab8f6/banner.png</ChangelogHeader>
   <ChangelogURL>https://raw.githubusercontent.com/ShaDisNX255/NcX_OnUpdate/fourteen/a52sxq/changelog.txt</ChangelogURL>
